--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -902,6 +902,7 @@ Titles
 <li><a href="Fantagraphics414.jpg">Troublemakers</a> (2009)
 <li><a href="Fantagraphics415.jpg">Trucker Fags In Denial</a> (2004)
 <li><a href="Fantagraphics416.jpg">Twilight Of The Assholes</a> (2011)
+<li><a href="../PacoRoca/PacoRoca1.jpg">Twists Of Fate</a> (2018)
 <li><a href="Fantagraphics417.jpg">Ultimate Gnatrat</a> (1990)
 <li><a href="Fantagraphics418.jpg">Unclothed Man In The 35th Century</a> (2009)
 <li><a href="Fantagraphics419.jpg">Unlovable: The Complete Box Set</a> (2010)
