--- a/index.html
+++ b/index.html
@@ -66406,6 +66406,13 @@
 </tr>
 
 <tr>
+<td>Paco Roca</td>
+<td>1969</td>
+<td>Creator</td>
+<td><a href="PacoRoca/PacoRoca.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Page by Paige</td>
 <td>2011</td>
 <td>Abrams</td>
