--- a/index.html
+++ b/index.html
@@ -58570,6 +58570,13 @@
 </tr>
 
 <tr>
+<td>Maurice Sendak</td>
+<td>1928</td>
+<td>Creator</td>
+<td><a href="MauriceSendak/MauriceSendak.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Maurice Whitman</td>
 <td>1920?</td>
 <td>Creator</td>
