--- a/Helix/Helix.html
+++ b/Helix/Helix.html
@@ -18,7 +18,20 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Transmetropolitan/Transmetropolitan01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Helix13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,20 +45,20 @@ Limited availability of the books in bookstores that already sold science fictio
 </p><p>
 Titles
 </p><p>
-<li>Black Lamb 	(1996)
-<li>Bloody Mary	(1996)
-<li>Bloody Mary: Lady Liberty (1997)
-<li>BrainBanx 	(1997) 
-<li>Cyberella (1996)
-<li>Dead Corps 	(1998)
-<li>The Dome: Ground Zero 	(1998)
-<li>Gemini Blood (1996) 
-<li>Michael Moorcock's Multiverse (1997) 
-<li>Sheva's War (1998) 
-<li>Star Crossed (1997) 
-<li>Time Breakers (1997) 
+<li><a href="Helix1.jpg">Black Lamb</a> (1996)
+<li><a href="Helix2.jpg">Bloody Mary</a> (1996)
+<li><a href="Helix3.jpg">Bloody Mary: Lady Liberty</a> (1997)
+<li><a href="Helix4.jpg">BrainBanx</a> 	(1997) 
+<li><a href="Helix5.jpg">Cyberella</a> (1996)
+<li><a href="Helix6.jpg">Dead Corps</a>	(1998)
+<li><a href="Helix7.jpg">The Dome: Ground Zero</a> 	(1998)
+<li><a href="Helix8.jpg">Gemini Blood</a> (1996) 
+<li><a href="Helix9.jpg">Michael Moorcock's Multiverse</a> (1997) 
+<li><a href="Helix10.jpg">Sheva's War</a> (1998) 
+<li><a href="Helix11.jpg">Star Crossed</a> (1997) 
+<li><a href="Helix12.jpg">Time Breakers</a> (1997) 
 <li><a href="../Transmetropolitan/Transmetropolitan.html">Transmetropolitan</a> (1997) 
-<li>Vermillion (1996) 
+<li><a href="Helix13.jpg">Vermillion</a> (1996) 
 
 </p>
 
