--- a/index.html
+++ b/index.html
@@ -14422,6 +14422,13 @@
 </tr>
 
 <tr>
+<td>Black Lamb</td>
+<td>1996</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blacklight</td>
 <td>2005</td>
 <td>Image</td>
@@ -15196,6 +15203,20 @@
 <td>2012</td>
 <td>First Second</td>
 <td><a href="FirstSecondBooks/FirstSecondBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blood Mary</td>
+<td>1996</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloody Mary: Lady Liberty</td>
+<td>1997</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16266,6 +16287,13 @@
 <td>1976</td>
 <td>Western</td>
 <td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brain Banx</td>
+<td>1997</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25047,6 +25075,13 @@
 </tr>
 
 <tr>
+<td>Cyberella</td>
+<td>1996</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cyberforce</td>
 <td>2012</td>
 <td>Image</td>
@@ -26780,6 +26815,13 @@
 <td>2001</td>
 <td>Vertigo</td>
 <td><a href="DeadBoyDetectives/DeadBoyDetectives.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead Corps</td>
+<td>1998</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29747,6 +29789,13 @@
 <td>2004</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dome: Ground Zero</td>
+<td>1998</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39326,6 +39375,13 @@
 <td>1945</td>
 <td>Spotlight</td>
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gemini Blood</td>
+<td>1998</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59451,6 +59507,13 @@
 
 <tr>
 <td>Michael Moorecock's Multiverse</td>
+<td>1997</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Michael Moorecock's Multiverse</td>
 <td>1999</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
@@ -77080,6 +77143,13 @@
 </tr>
 
 <tr>
+<td>Sheva's War</td>
+<td>1998</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shi / 10th Muse</td>
 <td>2007</td>
 <td>Tidalwave</td>
@@ -78982,6 +79052,13 @@
 </tr>
 
 <tr>
+<td>Soggy Landing</td>
+<td>2020</td>
+<td>Study Group</td>
+<td><a href="SoggyLanding/SoggyLanding.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sojourn</td>
 <td>2001</td>
 <td>CrossGen</td>
@@ -80540,6 +80617,13 @@
 <td>1990</td>
 <td>Accolade</td>
 <td><a href="StarControl/StarControl.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Star Crossed</td>
+<td>1997</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -85583,6 +85667,13 @@
 </tr>
 
 <tr>
+<td>Time Breakers</td>
+<td>1997</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Time Guardian</td>
 <td>2007</td>
 <td>Wildstorm</td>
@@ -89252,6 +89343,13 @@
 <td>1987</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vermillion</td>
+<td>1996</td>
+<td>Helix</td>
+<td><a href="Helix/Helix.html">Details</a></td>
 </tr>
 
 <tr>
