--- a/LittleBrown/LittleBrown.html
+++ b/LittleBrown/LittleBrown.html
@@ -28,6 +28,42 @@
 <div class="mySlides" style="text-align: center;"><img src="LittleBrown8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LittleBrown9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LittleBrown10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleBrown46.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -47,41 +83,42 @@ Titles
 <li><a href="LittleBrown8.jpg">Bloom County: Babylon</a> 1986
 <li><a href="LittleBrown9.jpg">Bloom County: Happy Trails</a> 1990
 <li><a href="LittleBrown10.jpg">Bloom County: Tales Too Ticklish to Tell</a> 1988
-Buzz Beamer's Radical Sports! 	1990
-CatStronauts  	2017
-Classics of Western Literature  	1990
-Comics: Anatomy of a Mass Medium  	1972
-Completely Mad: A History of the Comic Book and Magazine  	1991
-Daniel X: Alien Hunter 	2008
-DC Comics: Sixty Years of the World's Favorite Comic Book Heroes  	1995
-Deep & Dark Blue  	2020
-Encyclopedia of Early Earth  	2013
-Goldie Vance: The Hotel Whodunit  	2020
-Hangry  	2019
-In the Small  	2008
-Jacky Ha-Ha: A Graphic Novel  	2020
-Julius Knipl, Real Estate Photographer: Stories  	1996
-Lego Ninjago: Tournament of Elements  	2015
-Mad About the Fifties  	1997
-Max and Maurice, A Juvenile History in Seven Tricks  	1899
-Meg, Jo, Beth, and Amy: A Modern Retelling of Little Women  	2019
-Middle School Misadventures  	2019
-Middle School Misadventures: Operation: Hat Heist!  2020
-Night of the Mary Kay Commandos  	1989
-One Last Little Peek, 1980-1995  	1995
-Opus: 25 Years of His Sunday Best  	2004
-Outland: His Kisses Are Dreamy... but Those Hairballs Down My Cleavage...! 1994
-Penguin Dreams and Stranger Things  	1985
-Plain Janes  	2020
-Plish and Plum  1899
-Politically, Fashionably, and Aerodynamically Incorrect  1992
-R. Crumb Coffee Table Art Book  	1997
-Short & Skinny  	2018
-Terminal Lance Ultimate Omnibus  	2018
-Tin-Pot Foreign General and the Old Iron Woman  1985
-Tintin and the Lake of Sharks  	1989
-Tintin Three-in-One  	1993
-WolfWalkers: The Graphic Novel  2020
+<li><a href="LittleBrown11.jpg">Buzz Beamer's Radical Sports!</a> 1990
+<li><a href="LittleBrown12.jpg">Cat Stronauts</a> 2017
+<li><a href="LittleBrown13.jpg">Classics of Western Literature</a> 1990
+<li><a href="LittleBrown14.jpg">Comics: Anatomy of a Mass Medium</a>	1972
+<li><a href="LittleBrown15.jpg">Completely Mad: A History of the Comic Book and Magazine</a> 1991
+<li><a href="LittleBrown16.jpg">Daniel X: Alien Hunter</a> 	2008
+<li><a href="LittleBrown17.jpg">DC Comics: Sixty Years of the World's Favorite Comic Book Heroes</a> 1995
+<li><a href="LittleBrown18.jpg">Deep & Dark Blue</a>  	2020
+<li><a href="LittleBrown19.jpg">Encyclopedia of Early Earth</a>	2013
+<li><a href="LittleBrown20.jpg">Goldie Vance: The Hotel Whodunit</a>  	2020
+<li><a href="LittleBrown21.jpg">Hangry</a> 2019
+<li><a href="LittleBrown22.jpg">His Kisses Are Dreamy... but Those Hairballs Down My Cleavage...!</a> 1994
+<li><a href="LittleBrown23.jpg">In the Small</a>  	2008
+<li><a href="LittleBrown24.jpg">Jacky Ha-Ha: A Graphic Novel</a>  	2020
+<li><a href="LittleBrown25.jpg">Julius Knipl, Real Estate Photographer: Stories</a>   	1996
+<li><a href="LittleBrown26.jpg">Lego Ninjago: Tournament of Elements</a>  	2015
+<li><a href="LittleBrown27.jpg">Mad About the Fifties</a>  	1997
+<li><a href="LittleBrown28.jpg">Mad About the Sixties</a>  	1995
+<li><a href="LittleBrown29.jpg">Max and Maurice, A Juvenile History in Seven Tricks</a>  	1899
+<li><a href="LittleBrown30.jpg">Meg, Jo, Beth, and Amy: A Modern Retelling of Little Women</a>  	2019
+<li><a href="LittleBrown31.jpg">Middle School Misadventures</a>  	2019
+<li><a href="LittleBrown32.jpg">Middle School Misadventures: Operation: Hat Heist!</a>  2020
+<li><a href="LittleBrown33.jpg">Night of the Mary Kay Commandos</a>  	1989
+<li><a href="LittleBrown34.jpg">One Last Little Peek, 1980-1995</a>  	1995
+<li><a href="LittleBrown35.jpg">Opus: 25 Years of His Sunday Best</a>  	2004
+<li><a href="LittleBrown36.jpg">Penguin Dreams and Stranger Things</a> 1985
+<li><a href="LittleBrown37.jpg">Plain Janes</a>	2020
+<li><a href="LittleBrown38.jpg">Plish and Plum</a> 1899
+<li><a href="LittleBrown39.jpg">Politically, Fashionably, and Aerodynamically Incorrect</a>  1992
+<li><a href="LittleBrown40.jpg">R. Crumb Coffee Table Art Book</a>	1997
+<li><a href="LittleBrown41.jpg">Short & Skinny</a> 	2018
+<li><a href="LittleBrown42.jpg">Terminal Lance Ultimate Omnibus</a> 2018
+<li><a href="LittleBrown43.jpg">Tin-Pot Foreign General and the Old Iron Woman</a>  1985
+<li><a href="LittleBrown44.jpg">Tintin and the Lake of Sharks</a>  	1989
+<li><a href="LittleBrown45.jpg">Tintin Three-in-One</a>  	1993
+<li><a href="LittleBrown46.jpg">WolfWalkers: The Graphic Novel</a>  2020
 </p>
 
 </body>
