Little Brown index

--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -106,6 +106,7 @@
 <div class="mySlides" style="text-align: center;"><img src="DC87.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC88.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC89.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Plop/Plop1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC90.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC91.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DC92.jpg"></div>
@@ -510,6 +511,7 @@ Titles
 <li><a href="DC131.jpg">Picture Stories From The Bible</a> (1942)
 <li><a href="../Planetary/Planetary.html">Planetary</a> (1999)	 
 <li><a href="DC197.jpg">Plastic Man</a> (1966)	
+<li><a href="../Plop/Plop.html">Plop!</a> (1973)
 <li><a href="DC90.jpg">Power Of SHAZAM!</a> (1995)
 <li><a href="../PsychoDC/PsychoDC.html">Psycho</a> 	(1991)
 <li><a href="DC176.jpg">Raccoon Kids</a> (1954)
