--- a/LittleBrown/LittleBrown.html
+++ b/LittleBrown/LittleBrown.html
@@ -69,7 +69,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Web Site: <a href="https://www.littlebrown.com/">littlebrown.com</a> Little, Brown was an independent publisher until 1968. It was then owned by Time, Inc from 1968-1989, Time-Warner 1989- 2006, It was bought by Hachette Livre in 2006.
+Web Site: <a href="https://www.littlebrown.com/">littlebrown.com</a> Little, Brown is an imprint of Grand Central Publishing. It was an independent publisher from 1837 to 1968. It was then owned by Time, Inc from 1968-1989, Time-Warner 1989- 2006, It was bought by Hachette Livre in 2006.
 </p><p>
 Titles
 </p><p>
