--- a/index.html
+++ b/index.html
@@ -11959,6 +11959,13 @@
 </tr>
 
 <tr>
+<td>Beehive Books</td>
+<td>2018</td>
+<td>Publisher</td>
+<td><a href="BeehiveBooks/BeehiveBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beelzelvis</td>
 <td>1994</td>
 <td>Slave Labor</td>
