--- a/index.html
+++ b/index.html
@@ -71449,6 +71449,13 @@
 </tr>
 
 <tr>
+<td>Razor</td>
+<td>1992</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Razor Til I Bleed Daylight</td>
 <td>2000</td>
 <td>Avatar</td>
