--- a/Fukitor/Fukitor.html
+++ b/Fukitor/Fukitor.html
@@ -30,6 +30,21 @@
 <div class="mySlides" style="text-align: center;"><img src="Fukitor10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fukitor11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fukitor12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fukitor27.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
