--- a/BenjaminMarra/BenjaminMarra.html
+++ b/BenjaminMarra/BenjaminMarra.html
@@ -45,6 +45,7 @@
 <div class="mySlides" style="text-align: center;"><img src="BenjaminMarra25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BenjaminMarra26.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BenjaminMarra27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BenjaminMarra28.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
