--- a/CharlesBurns/CharlesBurns.html
+++ b/CharlesBurns/CharlesBurns.html
@@ -24,6 +24,7 @@
 <div class="mySlides" style="text-align: center;"><img src="CharlesBurns03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CharlesBurns04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CharlesBurns05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CharlesBurns06.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
