--- a/LondonNightStudios/LondonNightStudios.html
+++ b/LondonNightStudios/LondonNightStudios.html
@@ -120,40 +120,40 @@
 </p><p>
 Titles
 </p><p>
-<li><a href="LondonNight1.jpg">Arizona - A Simple Horror  </a>(1998)
-<li><a href="LondonNight2.jpg">Arizona - Wild at Heart  </a>(1998)
-<li><a href="LondonNight3.jpg">Beyond Bad Girls  </a>(1999)
-<li><a href="LondonNight4.jpg">Blood Reign Saga  </a>(1996)
-<li><a href="LondonNight5.jpg">Code Name: Heavy Metal  </a>(1992)
-<li><a href="LondonNight6.jpg">Crow / Razor - Finale  </a>(1999)
-<li><a href="LondonNight7.jpg">Crow / Razor - The Lost Chapter  </a>(1999)
-<li><a href="LondonNight8.jpg">Crow / Razor: Kill the Pain  </a>(1998)
-<li><a href="LondonNight9.jpg">Crow / Razor: Kill the Pain Collected</a>(1999)
-<li><a href="LondonNight10.jpg">Crow / Razor: Kill the Pain Tourbook  </a>(1997)
-<li><a href="LondonNight11.jpg">Darque Razor  </a>(1997)
-<li><a href="LondonNight12.jpg">Dead Boys  </a>(1993)
-<li><a href="LondonNight13.jpg">Demonique  </a>(1994)
-<li><a href="LondonNight14.jpg">Demonique Angel of the Night  </a>(1997)
-<li><a href="LondonNight15.jpg">Dream Wolves  </a>(1993)
-<li><a href="LondonNight16.jpg">Embrace: Hunger of the Flesh  </a>(1997)
-<li><a href="LondonNight17.jpg">Embrace: Kill Me Softly  </a>(1996)
-<li><a href="LondonNight18.jpg">Fangs of the Widow  </a>(1995)
-<li><a href="LondonNight19.jpg">Femme Macabre  </a>(1993)
-<li><a href="LondonNight20.jpg">Full Metal Fiction  </a>(1997)
-<li><a href="LondonNight21.jpg">In the Raw  </a>(1997)
-<li><a href="LondonNight22.jpg">James Gang  </a>(1993)
-<li><a href="LondonNight23.jpg">Jurassic Jane  </a>(1997)
-<li><a href="LondonNight24.jpg">Kabuki: Dance of Death </a>(1995)
-<li><a href="LondonNight25.jpg">Knightshift  </a>(1996)
-<li><a href="LondonNight26.jpg">Lethal Strike - Shadow Viper  </a>(1998)
-<li><a href="LondonNight27.jpg">Lethal Strike Annual  </a>(1996)
-<li><a href="LondonNight28.jpg">Lethal Strike Archives </a>(1997)
-<li><a href="LondonNight29.jpg">Lethal Strike Collected</a>(1996)
-<li><a href="LondonNight30.jpg">Lethal Strike  </a>(1995)
-<li><a href="LondonNight31.jpg">Lethal Strike/Double Impact: Lethal Impact  </a>(1996)
-<li><a href="LondonNight32.jpg">LNS Bibliography  </a>(1998)
-<li><a href="LondonNight33.jpg">LOLN - Fall Special  </a>(1997)
-<li><a href="LondonNight34.jpg">LOLN - Spotlight - Devon Michaels  </a>(1998)
+<li><a href="LondonNight1.jpg">Arizona - A Simple Horror</a> (1998)
+<li><a href="LondonNight2.jpg">Arizona - Wild at Heart</a> (1998)
+<li><a href="LondonNight3.jpg">Beyond Bad Girls  </a> (1999)
+<li><a href="LondonNight4.jpg">Blood Reign Saga  </a> (1996)
+<li><a href="LondonNight5.jpg">Code Name: Heavy Metal</a> (1992)
+<li><a href="LondonNight6.jpg">Crow / Razor: Finale</a> (1999)
+<li><a href="LondonNight8.jpg">Crow / Razor: Kill the Pain  </a> (1998)
+<li><a href="LondonNight9.jpg">Crow / Razor: Kill the Pain Collected</a> (1999)
+<li><a href="LondonNight10.jpg">Crow / Razor: Kill the Pain Tourbook</a> (1997)
+<li><a href="LondonNight7.jpg">Crow / Razor: The Lost Chapter</a> (1999)
+<li><a href="LondonNight11.jpg">Darque Razor</a> (1997)
+<li><a href="LondonNight12.jpg">Dead Boys</a> (1993)
+<li><a href="LondonNight13.jpg">Demonique</a> (1994)
+<li><a href="LondonNight14.jpg">Demonique Angel of the Night</a> (1997)
+<li><a href="LondonNight15.jpg">Dream Wolves</a> (1993)
+<li><a href="LondonNight16.jpg">Embrace: Hunger of the Flesh</a> (1997)
+<li><a href="LondonNight17.jpg">Embrace: Kill Me Softly</a> (1996)
+<li><a href="LondonNight18.jpg">Fangs of the Widow</a> (1995)
+<li><a href="LondonNight19.jpg">Femme Macabre</a> (1993)
+<li><a href="LondonNight20.jpg">Full Metal Fiction</a> (1997)
+<li><a href="LondonNight21.jpg">In the Raw</a> (1997)
+<li><a href="LondonNight22.jpg">James Gang</a> (1993)
+<li><a href="LondonNight23.jpg">Jurassic Jane</a> (1997)
+<li><a href="LondonNight24.jpg">Kabuki: Dance of Death</a> (1995)
+<li><a href="LondonNight25.jpg">Knightshift</a> (1996)
+<li><a href="LondonNight26.jpg">Lethal Strike - Shadow Viper</a> (1998)
+<li><a href="LondonNight27.jpg">Lethal Strike Annual</a> (1996)
+<li><a href="LondonNight28.jpg">Lethal Strike Archives</a> (1997)
+<li><a href="LondonNight29.jpg">Lethal Strike Collected</a> (1996)
+<li><a href="LondonNight30.jpg">Lethal Strike</a> (1995)
+<li><a href="LondonNight31.jpg">Lethal Strike/Double Impact: Lethal Impact</a> (1996)
+<li><a href="LondonNight32.jpg">LNS Bibliography</a> (1998)
+<li><a href="LondonNight33.jpg">LOLN - Fall Special</a> (1997)
+<li><a href="LondonNight34.jpg">LOLN - Spotlight - Devon Michaels</a>(1998)
 <li><a href="LondonNight35.jpg">LOLN - Winter Special  </a>(1997)
 <li><a href="LondonNight36.jpg">London Night Lingerie Special  </a>(1996)
 <li><a href="LondonNight37.jpg">Maximum Manga  </a>(1997)
@@ -200,8 +200,8 @@ Titles
 <li><a href="LondonNight78.jpg">Sade  </a>(1996)
 <li><a href="LondonNight79.jpg">Sade / Razor Encore Edition</a> (1996)
 <li><a href="LondonNight80.jpg">Savage Blood  </a> (1993)
-<li><a href="LondonNight82.jpg">Sheena - Queen of the Jungle  </a> (1998)
-<li><a href="LondonNight81.jpg">Sheena, Queen of the Jungle: Bound </a> (1998)
+<li><a href="LondonNight82.jpg">Sheena Queen of the Jungle  </a> (1998)
+<li><a href="LondonNight81.jpg">Sheena Queen of the Jungle: Bound </a> (1998)
 <li><a href="LondonNight83.jpg">Sisters of Mercy  </a> (1997)
 <li><a href="LondonNight84.jpg">Sisters of Mercy: Paradise Lost  </a> (1997)
 <li><a href="LondonNight85.jpg">Skid Roze </a> (1998)
