--- a/index.html
+++ b/index.html
@@ -60773,6 +60773,13 @@
 </tr>
 
 <tr>
+<td>Miller Publishing</td>
+<td>1989</td>
+<td>Publisher</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Millie The Model</td>
 <td>1945</td>
 <td>Marvel</td>
