--- a/index.html
+++ b/index.html
@@ -10727,6 +10727,13 @@
 </tr>
 
 <tr>
+<td>Banyon Of The High Fortress</td>
+<td>1989</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Banzai Girl</td>
 <td>2002</td>
 <td>Sirius</td>
@@ -28078,6 +28085,13 @@
 </tr>
 
 <tr>
+<td>Delta-Wave</td>
+<td>1992</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Delusional</td>
 <td>2010</td>
 <td>AdHouse</td>
@@ -41520,6 +41534,13 @@
 </tr>
 
 <tr>
+<td>Grass Green's Wildman Comics And Stories</td>
+<td>1988</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grass Kings</td>
 <td>2017</td>
 <td>Boom!</td>
@@ -50056,6 +50077,13 @@
 <td>1986</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jontar Returns</td>
+<td>1990</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -69798,6 +69826,13 @@
 </tr>
 
 <tr>
+<td>Power Defense</td>
+<td>1993</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Power Factor</td>
 <td>1990</td>
 <td>Innovation</td>
@@ -87728,6 +87763,13 @@
 </tr>
 
 <tr>
+<td>Trial Run</td>
+<td>1987</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tribute: Michael Jackson</td>
 <td>2009</td>
 <td>Tidalwave</td>
@@ -93234,6 +93276,13 @@
 <td>2003</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildman Comics And Stories</td>
+<td>1989</td>
+<td>Miller</td>
+<td><a href="MillerPublishing/MillerPublishing.html">Details</a></td>
 </tr>
 
 <tr>
