--- a/index.html
+++ b/index.html
@@ -87305,6 +87305,13 @@
 </tr>
 
 <tr>
+<td>Tor Books</td>
+<td>1981</td>
+<td>Publisher</td>
+<td><a href="TorBooks/TorBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Torment</td>
 <td>1991</td>
 <td>Aircel</td>
